--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 db:
-  image: mysql
+  image: mariadb:10
   volumes:
-    - ./mysql/runtime:/var/lib/mysql
+    - /mnt/db_piwik:/var/lib/mysql
   environment:
     - MYSQL_ROOT_PASSWORD
 app:
@@ -9,11 +9,13 @@ app:
   links:
     - db
   volumes:
-    - ./config:/var/www/html/config
-    - ./ssmtp.conf:/etc/ssmtp/ssmtp.conf
-    - ./revaliases:/etc/ssmtp/revaliases
+    - /mnt/piwik/app/config:/var/www/html/config
+#    - /mnt/piwik/app/ssmtp.conf:/etc/ssmtp/ssmtp.conf
+#    - /mnt/piwik/app/revaliases:/etc/ssmtp/revaliases
 web:
   image: nginx
+  ports:
+    - "5021:80"
   volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf:ro
   links:
