--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,14 @@ app:
     - db
   volumes:
     - /mnt/piwik/app/config:/var/www/html/config
-    - /mnt/piwik/app/ssmtp.conf:/etc/ssmtp/ssmtp.conf
-    - /mnt/piwik/app/revaliases:/etc/ssmtp/revaliases
+#    - /mnt/piwik/app/ssmtp.conf:/etc/ssmtp/ssmtp.conf
+#    - /mnt/piwik/app/revaliases:/etc/ssmtp/revaliases
 web:
   image: nginx
+  ports:
+    - "5021:80"
   volumes:
-    - /mnt/piwik/web/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./nginx.conf:/etc/nginx/nginx.conf:ro
   links:
     - app
   volumes_from:
